tests/NormalTests/paczka1/fuzzy1/68299314.err
Error in line 11: 13lTUB A762 2,0
Error in line 13: 13lTUB A65 96,1
Error in line 20: 13lTUB A161 0,2
Error in line 30: A937 A937 3,4
